--- a/package.json
+++ b/package.json
@@ -10,17 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
+    "daisyui": "^5.0.18",
     "humps": "^2.0.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1",
-    "react-toastify": "^11.0.5"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "7.5.0",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/humps": "^2.0.6",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.14.1",
     "@types/parse-json": "^4.0.2",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.0.10",
