--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "7.5.0",
     "react-toastify": "^11.0.5",
+    "redux-logger": "^3.0.6",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-transition-group": "^4.4.12",
+    "@types/redux-logger": "^3.0.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
