--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "stores/*": ["./src/stores/*"],
+      "stores/*": ["src/stores/*"],
       "types/*": ["./src/types/*"],
       "components/*": ["./src/components/*"],
       "constants/*": ["./src/constants/*"],
